--- a/Endian/client/index.html
+++ b/Endian/client/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Endian | Rat Lab Studio</title>
+    <link rel="icon" href="https://ratlabstudio.github.io/JavaScript/resources/assets/favicon.png">
 
     <style>
         html,
@@ -15,18 +16,10 @@
             text-align: center;
         }
 
-        h1 {
-            margin: 0;
-            margin-top: 1vh;
-            margin-bottom: 1vh;
-            color: rgb(47, 204, 209);
-        }
-
         a {
             margin: 0;
             text-decoration: none;
             color: rgb(255, 225, 170);
-            font-size: 1.75vh;
             transition: color 0.2s ease;
         }
 
@@ -34,15 +27,43 @@
             color: orange;
         }
 
-        p {
-            color: lightgreen;
+        #versionInfo {
+            position: absolute;
+            top: 1vh;
+            left: 1vh;
+            text-align: left;
+            margin: 0;
+            z-index: 10;
+            color: white;
+            font-size: 2vh;
+        }
+
+        #versionInfo p {
+            margin: 0;
+        }
+
+        canvas {
+            position: absolute;
+            top: 0;
+            left: 0;
+            margin: 0;
+            width: 100%;
+            height: 100%;
         }
     </style>
 </head>
 
 <body>
-    <h1>Project Endian Alpha v5.0.0</h1>
-    <a href="https://ratlabstudio.com">Rat Lab Studio 2024</a>
+    <div id="versionInfo">
+        <p style="color: aqua; margin-bottom: 1vh;">Project Endian Alpha v5.0.0</p>
+        <p><a href="https://ratlabstudio.com">Rat Lab Studio 2024</a></p>
+    </div>
+
+    <canvas id="canvas"></canvas>
+
+    <script type="module">
+        import * as main from './js/script.js'
+    </script>
 </body>
 
 </html>
