Basic terrain generation

--- a/Endian/client/index.html
+++ b/Endian/client/index.html
@@ -30,8 +30,8 @@
         #versionInfo {
             position: absolute;
             top: 1vh;
-            left: 1vh;
-            text-align: left;
+            right: 1vh;
+            text-align: right;
             margin: 0;
             z-index: 10;
             color: white;
