--- a/Endian/client/index.html
+++ b/Endian/client/index.html
@@ -30,12 +30,13 @@
         #versionInfo {
             position: absolute;
             top: 1vh;
-            right: 1vh;
-            text-align: right;
+            left: 50%;
+            transform: translateX(-50%);
+            text-align: center;
             margin: 0;
             z-index: 10;
             color: white;
-            font-size: 2vh;
+            font-size: 1.5vh;
         }
 
         #versionInfo p {
@@ -50,6 +51,17 @@
             width: 100%;
             height: 100%;
         }
+
+        #info {
+            position: absolute;
+            right: 0;
+            bottom: 0;
+            font-family: sans-serif;
+            font-size: 24px;
+            color: rgba(255, 255, 255, 0.5);
+            margin: 8px;
+            z-index: 1;
+        }
     </style>
 </head>
 
@@ -59,7 +71,9 @@
         <p><a href="https://ratlabstudio.com">Rat Lab Studio 2024</a></p>
     </div>
 
-    <canvas id="canvas"></canvas>
+    <div id="info">
+        <div id="playerPosition"></div>
+    </div>
 
     <script type="module">
         import * as main from './js/script.js'
